language/move-lang/tests/move_check/parser/module_use_after_struct.move
module M {
    struct S {}
    // Use declarations must come before struct declarations.
    use 0x1::X;
}
